// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin-chart-composed All charts with breakdowns 1`] = `
Object {
  "AreaProps": Array [
    Object {
      "children": Array [
        undefined,
        false,
      ],
      "dataKey": "COUNT_DISTINCT(period)_$_Custom",
      "fill": "#9467bd",
      "isAnimationActive": undefined,
      "label": Object {
        "breakdown": "COUNT_DISTINCT(period)_$_Custom",
        "breakdowns": Array [
          "COUNT_DISTINCT(period)_$_Standard",
          "COUNT_DISTINCT(group_name)_$_Standard",
          "COUNT_DISTINCT(due_to_group)_$_Standard",
          "COUNT_DISTINCT(efficiency)_$_Standard",
          "COUNT_DISTINCT(period)_$_Custom",
          "COUNT_DISTINCT(group_name)_$_Custom",
          "COUNT_DISTINCT(due_to_group)_$_Custom",
          "COUNT_DISTINCT(efficiency)_$_Custom",
        ],
        "content": [Function],
        "currentData": Array [
          Object {
            "COUNT_DISTINCT(due_to_group)": 12,
            "COUNT_DISTINCT(due_to_group)_$_Custom": 12,
            "COUNT_DISTINCT(due_to_group)_$_Standard": 12,
            "COUNT_DISTINCT(efficiency)": 3,
            "COUNT_DISTINCT(efficiency)_$_Custom": 3,
            "COUNT_DISTINCT(efficiency)_$_Standard": 3,
            "COUNT_DISTINCT(group_name)": 31,
            "COUNT_DISTINCT(group_name)_$_Custom": 31,
            "COUNT_DISTINCT(group_name)_$_Standard": 31,
            "COUNT_DISTINCT(period)": 5,
            "COUNT_DISTINCT(period)_$_Custom": 5,
            "COUNT_DISTINCT(period)_$_Standard": 5,
            "group_type": "Variable",
            "period_type": "Custom",
            "rechartsDataKey": "Variable",
            "rechartsDataKeyUI": "Variable",
          },
          Object {
            "COUNT_DISTINCT(due_to_group)": 6,
            "COUNT_DISTINCT(due_to_group)_$_Custom": 7,
            "COUNT_DISTINCT(due_to_group)_$_Standard": 6,
            "COUNT_DISTINCT(efficiency)": 2,
            "COUNT_DISTINCT(efficiency)_$_Custom": 2,
            "COUNT_DISTINCT(efficiency)_$_Standard": 2,
            "COUNT_DISTINCT(group_name)": 6,
            "COUNT_DISTINCT(group_name)_$_Custom": 7,
            "COUNT_DISTINCT(group_name)_$_Standard": 6,
            "COUNT_DISTINCT(period)": 3,
            "COUNT_DISTINCT(period)_$_Custom": 5,
            "COUNT_DISTINCT(period)_$_Standard": 3,
            "group_type": "Direct Due To Group",
            "period_type": "Standard",
            "rechartsDataKey": "Direct Due To Group",
            "rechartsDataKeyUI": "Direct Due To Group",
          },
          Object {
            "COUNT_DISTINCT(due_to_group)": 6,
            "COUNT_DISTINCT(due_to_group)_$_Custom": 7,
            "COUNT_DISTINCT(due_to_group)_$_Standard": 6,
            "COUNT_DISTINCT(efficiency)": 2,
            "COUNT_DISTINCT(efficiency)_$_Custom": 2,
            "COUNT_DISTINCT(efficiency)_$_Standard": 2,
            "COUNT_DISTINCT(group_name)": 6,
            "COUNT_DISTINCT(group_name)_$_Custom": 7,
            "COUNT_DISTINCT(group_name)_$_Standard": 6,
            "COUNT_DISTINCT(period)": 3,
            "COUNT_DISTINCT(period)_$_Custom": 5,
            "COUNT_DISTINCT(period)_$_Standard": 3,
            "group_type": "Due To Group",
            "period_type": "Standard",
            "rechartsDataKey": "Due To Group",
            "rechartsDataKeyUI": "Due To Group",
          },
          Object {
            "COUNT_DISTINCT(due_to_group)": 0,
            "COUNT_DISTINCT(due_to_group)_$_Custom": 0,
            "COUNT_DISTINCT(due_to_group)_$_Standard": 0,
            "COUNT_DISTINCT(efficiency)": 6,
            "COUNT_DISTINCT(efficiency)_$_Custom": 6,
            "COUNT_DISTINCT(efficiency)_$_Standard": 6,
            "COUNT_DISTINCT(group_name)": 3,
            "COUNT_DISTINCT(group_name)_$_Custom": 3,
            "COUNT_DISTINCT(group_name)_$_Standard": 3,
            "COUNT_DISTINCT(period)": 5,
            "COUNT_DISTINCT(period)_$_Custom": 5,
            "COUNT_DISTINCT(period)_$_Standard": 5,
            "group_type": "Summary Group",
            "period_type": "Standard",
            "rechartsDataKey": "Summary Group",
            "rechartsDataKeyUI": "Summary Group",
          },
        ],
        "fill": "black",
        "formatter": [Function],
        "hasOrderedBars": undefined,
        "position": "center",
      },
      "opacity": 0.8,
      "stroke": "#9467bd",
      "strokeWidth": 2,
      "type": "basis",
      "yAxisId": "left",
    },
    Object {},
  ],
  "BarProps": Array [
    Object {
      "children": Array [
        undefined,
        false,
      ],
      "dataKey": "COUNT_DISTINCT(efficiency)_$_Custom",
      "fill": "#7f7f7f",
      "isAnimationActive": undefined,
      "label": Object {
        "breakdown": "COUNT_DISTINCT(efficiency)_$_Custom",
        "breakdowns": Array [
          "COUNT_DISTINCT(period)_$_Standard",
          "COUNT_DISTINCT(group_name)_$_Standard",
          "COUNT_DISTINCT(due_to_group)_$_Standard",
          "COUNT_DISTINCT(efficiency)_$_Standard",
          "COUNT_DISTINCT(period)_$_Custom",
          "COUNT_DISTINCT(group_name)_$_Custom",
          "COUNT_DISTINCT(due_to_group)_$_Custom",
          "COUNT_DISTINCT(efficiency)_$_Custom",
        ],
        "content": [Function],
        "currentData": Array [
          Object {
            "COUNT_DISTINCT(due_to_group)": 12,
            "COUNT_DISTINCT(due_to_group)_$_Custom": 12,
            "COUNT_DISTINCT(due_to_group)_$_Standard": 12,
            "COUNT_DISTINCT(efficiency)": 3,
            "COUNT_DISTINCT(efficiency)_$_Custom": 3,
            "COUNT_DISTINCT(efficiency)_$_Standard": 3,
            "COUNT_DISTINCT(group_name)": 31,
            "COUNT_DISTINCT(group_name)_$_Custom": 31,
            "COUNT_DISTINCT(group_name)_$_Standard": 31,
            "COUNT_DISTINCT(period)": 5,
            "COUNT_DISTINCT(period)_$_Custom": 5,
            "COUNT_DISTINCT(period)_$_Standard": 5,
            "group_type": "Variable",
            "period_type": "Custom",
            "rechartsDataKey": "Variable",
            "rechartsDataKeyUI": "Variable",
          },
          Object {
            "COUNT_DISTINCT(due_to_group)": 6,
            "COUNT_DISTINCT(due_to_group)_$_Custom": 7,
            "COUNT_DISTINCT(due_to_group)_$_Standard": 6,
            "COUNT_DISTINCT(efficiency)": 2,
            "COUNT_DISTINCT(efficiency)_$_Custom": 2,
            "COUNT_DISTINCT(efficiency)_$_Standard": 2,
            "COUNT_DISTINCT(group_name)": 6,
            "COUNT_DISTINCT(group_name)_$_Custom": 7,
            "COUNT_DISTINCT(group_name)_$_Standard": 6,
            "COUNT_DISTINCT(period)": 3,
            "COUNT_DISTINCT(period)_$_Custom": 5,
            "COUNT_DISTINCT(period)_$_Standard": 3,
            "group_type": "Direct Due To Group",
            "period_type": "Standard",
            "rechartsDataKey": "Direct Due To Group",
            "rechartsDataKeyUI": "Direct Due To Group",
          },
          Object {
            "COUNT_DISTINCT(due_to_group)": 6,
            "COUNT_DISTINCT(due_to_group)_$_Custom": 7,
            "COUNT_DISTINCT(due_to_group)_$_Standard": 6,
            "COUNT_DISTINCT(efficiency)": 2,
            "COUNT_DISTINCT(efficiency)_$_Custom": 2,
            "COUNT_DISTINCT(efficiency)_$_Standard": 2,
            "COUNT_DISTINCT(group_name)": 6,
            "COUNT_DISTINCT(group_name)_$_Custom": 7,
            "COUNT_DISTINCT(group_name)_$_Standard": 6,
            "COUNT_DISTINCT(period)": 3,
            "COUNT_DISTINCT(period)_$_Custom": 5,
            "COUNT_DISTINCT(period)_$_Standard": 3,
            "group_type": "Due To Group",
            "period_type": "Standard",
            "rechartsDataKey": "Due To Group",
            "rechartsDataKeyUI": "Due To Group",
          },
          Object {
            "COUNT_DISTINCT(due_to_group)": 0,
            "COUNT_DISTINCT(due_to_group)_$_Custom": 0,
            "COUNT_DISTINCT(due_to_group)_$_Standard": 0,
            "COUNT_DISTINCT(efficiency)": 6,
            "COUNT_DISTINCT(efficiency)_$_Custom": 6,
            "COUNT_DISTINCT(efficiency)_$_Standard": 6,
            "COUNT_DISTINCT(group_name)": 3,
            "COUNT_DISTINCT(group_name)_$_Custom": 3,
            "COUNT_DISTINCT(group_name)_$_Standard": 3,
            "COUNT_DISTINCT(period)": 5,
            "COUNT_DISTINCT(period)_$_Custom": 5,
            "COUNT_DISTINCT(period)_$_Standard": 5,
            "group_type": "Summary Group",
            "period_type": "Standard",
            "rechartsDataKey": "Summary Group",
            "rechartsDataKeyUI": "Summary Group",
          },
        ],
        "fill": "black",
        "formatter": [Function],
        "hasOrderedBars": undefined,
        "position": "center",
      },
      "opacity": 0.6,
      "stackId": "COUNT_DISTINCT(efficiency)_$_Custom",
      "yAxisId": "right",
    },
    Object {},
  ],
  "CartesianGridProps": undefined,
  "ComposedChartProps": undefined,
  "LegendProps": undefined,
  "LineProps": Array [
    Object {
      "children": Array [
        undefined,
        false,
      ],
      "dataKey": "COUNT_DISTINCT(group_name)_$_Custom",
      "isAnimationActive": undefined,
      "label": Object {
        "breakdown": "COUNT_DISTINCT(group_name)_$_Custom",
        "breakdowns": Array [
          "COUNT_DISTINCT(period)_$_Standard",
          "COUNT_DISTINCT(group_name)_$_Standard",
          "COUNT_DISTINCT(due_to_group)_$_Standard",
          "COUNT_DISTINCT(efficiency)_$_Standard",
          "COUNT_DISTINCT(period)_$_Custom",
          "COUNT_DISTINCT(group_name)_$_Custom",
          "COUNT_DISTINCT(due_to_group)_$_Custom",
          "COUNT_DISTINCT(efficiency)_$_Custom",
        ],
        "content": [Function],
        "currentData": Array [
          Object {
            "COUNT_DISTINCT(due_to_group)": 12,
            "COUNT_DISTINCT(due_to_group)_$_Custom": 12,
            "COUNT_DISTINCT(due_to_group)_$_Standard": 12,
            "COUNT_DISTINCT(efficiency)": 3,
            "COUNT_DISTINCT(efficiency)_$_Custom": 3,
            "COUNT_DISTINCT(efficiency)_$_Standard": 3,
            "COUNT_DISTINCT(group_name)": 31,
            "COUNT_DISTINCT(group_name)_$_Custom": 31,
            "COUNT_DISTINCT(group_name)_$_Standard": 31,
            "COUNT_DISTINCT(period)": 5,
            "COUNT_DISTINCT(period)_$_Custom": 5,
            "COUNT_DISTINCT(period)_$_Standard": 5,
            "group_type": "Variable",
            "period_type": "Custom",
            "rechartsDataKey": "Variable",
            "rechartsDataKeyUI": "Variable",
          },
          Object {
            "COUNT_DISTINCT(due_to_group)": 6,
            "COUNT_DISTINCT(due_to_group)_$_Custom": 7,
            "COUNT_DISTINCT(due_to_group)_$_Standard": 6,
            "COUNT_DISTINCT(efficiency)": 2,
            "COUNT_DISTINCT(efficiency)_$_Custom": 2,
            "COUNT_DISTINCT(efficiency)_$_Standard": 2,
            "COUNT_DISTINCT(group_name)": 6,
            "COUNT_DISTINCT(group_name)_$_Custom": 7,
            "COUNT_DISTINCT(group_name)_$_Standard": 6,
            "COUNT_DISTINCT(period)": 3,
            "COUNT_DISTINCT(period)_$_Custom": 5,
            "COUNT_DISTINCT(period)_$_Standard": 3,
            "group_type": "Direct Due To Group",
            "period_type": "Standard",
            "rechartsDataKey": "Direct Due To Group",
            "rechartsDataKeyUI": "Direct Due To Group",
          },
          Object {
            "COUNT_DISTINCT(due_to_group)": 6,
            "COUNT_DISTINCT(due_to_group)_$_Custom": 7,
            "COUNT_DISTINCT(due_to_group)_$_Standard": 6,
            "COUNT_DISTINCT(efficiency)": 2,
            "COUNT_DISTINCT(efficiency)_$_Custom": 2,
            "COUNT_DISTINCT(efficiency)_$_Standard": 2,
            "COUNT_DISTINCT(group_name)": 6,
            "COUNT_DISTINCT(group_name)_$_Custom": 7,
            "COUNT_DISTINCT(group_name)_$_Standard": 6,
            "COUNT_DISTINCT(period)": 3,
            "COUNT_DISTINCT(period)_$_Custom": 5,
            "COUNT_DISTINCT(period)_$_Standard": 3,
            "group_type": "Due To Group",
            "period_type": "Standard",
            "rechartsDataKey": "Due To Group",
            "rechartsDataKeyUI": "Due To Group",
          },
          Object {
            "COUNT_DISTINCT(due_to_group)": 0,
            "COUNT_DISTINCT(due_to_group)_$_Custom": 0,
            "COUNT_DISTINCT(due_to_group)_$_Standard": 0,
            "COUNT_DISTINCT(efficiency)": 6,
            "COUNT_DISTINCT(efficiency)_$_Custom": 6,
            "COUNT_DISTINCT(efficiency)_$_Standard": 6,
            "COUNT_DISTINCT(group_name)": 3,
            "COUNT_DISTINCT(group_name)_$_Custom": 3,
            "COUNT_DISTINCT(group_name)_$_Standard": 3,
            "COUNT_DISTINCT(period)": 5,
            "COUNT_DISTINCT(period)_$_Custom": 5,
            "COUNT_DISTINCT(period)_$_Standard": 5,
            "group_type": "Summary Group",
            "period_type": "Standard",
            "rechartsDataKey": "Summary Group",
            "rechartsDataKeyUI": "Summary Group",
          },
        ],
        "fill": "black",
        "formatter": [Function],
        "hasOrderedBars": undefined,
        "position": "center",
      },
      "opacity": 0.8,
      "stroke": "#8c564b",
      "strokeWidth": 2,
      "type": "linear",
      "yAxisId": "left",
    },
    Object {},
  ],
  "ScatterProps": Array [
    Object {
      "children": Array [
        undefined,
        false,
      ],
      "dataKey": "COUNT_DISTINCT(due_to_group)_$_Custom",
      "fill": "#e377c2",
      "isAnimationActive": undefined,
      "label": Object {
        "breakdown": "COUNT_DISTINCT(due_to_group)_$_Custom",
        "breakdowns": Array [
          "COUNT_DISTINCT(period)_$_Standard",
          "COUNT_DISTINCT(group_name)_$_Standard",
          "COUNT_DISTINCT(due_to_group)_$_Standard",
          "COUNT_DISTINCT(efficiency)_$_Standard",
          "COUNT_DISTINCT(period)_$_Custom",
          "COUNT_DISTINCT(group_name)_$_Custom",
          "COUNT_DISTINCT(due_to_group)_$_Custom",
          "COUNT_DISTINCT(efficiency)_$_Custom",
        ],
        "content": [Function],
        "currentData": Array [
          Object {
            "COUNT_DISTINCT(due_to_group)": 12,
            "COUNT_DISTINCT(due_to_group)_$_Custom": 12,
            "COUNT_DISTINCT(due_to_group)_$_Standard": 12,
            "COUNT_DISTINCT(efficiency)": 3,
            "COUNT_DISTINCT(efficiency)_$_Custom": 3,
            "COUNT_DISTINCT(efficiency)_$_Standard": 3,
            "COUNT_DISTINCT(group_name)": 31,
            "COUNT_DISTINCT(group_name)_$_Custom": 31,
            "COUNT_DISTINCT(group_name)_$_Standard": 31,
            "COUNT_DISTINCT(period)": 5,
            "COUNT_DISTINCT(period)_$_Custom": 5,
            "COUNT_DISTINCT(period)_$_Standard": 5,
            "group_type": "Variable",
            "period_type": "Custom",
            "rechartsDataKey": "Variable",
            "rechartsDataKeyUI": "Variable",
          },
          Object {
            "COUNT_DISTINCT(due_to_group)": 6,
            "COUNT_DISTINCT(due_to_group)_$_Custom": 7,
            "COUNT_DISTINCT(due_to_group)_$_Standard": 6,
            "COUNT_DISTINCT(efficiency)": 2,
            "COUNT_DISTINCT(efficiency)_$_Custom": 2,
            "COUNT_DISTINCT(efficiency)_$_Standard": 2,
            "COUNT_DISTINCT(group_name)": 6,
            "COUNT_DISTINCT(group_name)_$_Custom": 7,
            "COUNT_DISTINCT(group_name)_$_Standard": 6,
            "COUNT_DISTINCT(period)": 3,
            "COUNT_DISTINCT(period)_$_Custom": 5,
            "COUNT_DISTINCT(period)_$_Standard": 3,
            "group_type": "Direct Due To Group",
            "period_type": "Standard",
            "rechartsDataKey": "Direct Due To Group",
            "rechartsDataKeyUI": "Direct Due To Group",
          },
          Object {
            "COUNT_DISTINCT(due_to_group)": 6,
            "COUNT_DISTINCT(due_to_group)_$_Custom": 7,
            "COUNT_DISTINCT(due_to_group)_$_Standard": 6,
            "COUNT_DISTINCT(efficiency)": 2,
            "COUNT_DISTINCT(efficiency)_$_Custom": 2,
            "COUNT_DISTINCT(efficiency)_$_Standard": 2,
            "COUNT_DISTINCT(group_name)": 6,
            "COUNT_DISTINCT(group_name)_$_Custom": 7,
            "COUNT_DISTINCT(group_name)_$_Standard": 6,
            "COUNT_DISTINCT(period)": 3,
            "COUNT_DISTINCT(period)_$_Custom": 5,
            "COUNT_DISTINCT(period)_$_Standard": 3,
            "group_type": "Due To Group",
            "period_type": "Standard",
            "rechartsDataKey": "Due To Group",
            "rechartsDataKeyUI": "Due To Group",
          },
          Object {
            "COUNT_DISTINCT(due_to_group)": 0,
            "COUNT_DISTINCT(due_to_group)_$_Custom": 0,
            "COUNT_DISTINCT(due_to_group)_$_Standard": 0,
            "COUNT_DISTINCT(efficiency)": 6,
            "COUNT_DISTINCT(efficiency)_$_Custom": 6,
            "COUNT_DISTINCT(efficiency)_$_Standard": 6,
            "COUNT_DISTINCT(group_name)": 3,
            "COUNT_DISTINCT(group_name)_$_Custom": 3,
            "COUNT_DISTINCT(group_name)_$_Standard": 3,
            "COUNT_DISTINCT(period)": 5,
            "COUNT_DISTINCT(period)_$_Custom": 5,
            "COUNT_DISTINCT(period)_$_Standard": 5,
            "group_type": "Summary Group",
            "period_type": "Standard",
            "rechartsDataKey": "Summary Group",
            "rechartsDataKeyUI": "Summary Group",
          },
        ],
        "fill": "black",
        "formatter": [Function],
        "hasOrderedBars": undefined,
        "position": "center",
      },
      "opacity": 0.8,
      "shape": "circle",
      "yAxisId": "left",
    },
    Object {},
  ],
  "TooltipProps": undefined,
  "XAxisProps": undefined,
  "YAxisProps": Array [
    Object {
      "angle": -0,
      "axisLine": false,
      "dx": -5,
      "label": Object {
        "angle": -0,
        "position": "insideRight",
        "value": undefined,
      },
      "orientation": "right",
      "tick": [Function],
      "width": 1,
      "yAxisId": "right",
    },
    Object {},
  ],
}
`;

exports[`plugin-chart-composed Chart with default props (legend left / horizontal / Y2Axis / bars / breakdowns) 1`] = `
Object {
  "BarProps": undefined,
  "CartesianGridProps": undefined,
  "ComposedChartProps": undefined,
  "LegendProps": undefined,
  "TooltipProps": undefined,
  "XAxisProps": undefined,
  "YAxisProps": Array [
    Object {
      "angle": -0,
      "axisLine": false,
      "dx": -5,
      "label": Object {
        "angle": -0,
        "position": "insideRight",
        "value": "Label 2",
      },
      "orientation": "right",
      "tick": [Function],
      "width": 11,
      "yAxisId": "right",
    },
    Object {},
  ],
}
`;

exports[`plugin-chart-composed Chart with default props (legend right / vertical / number format / bars / all labels / breakdowns) 1`] = `
Object {
  "CartesianGridProps": undefined,
  "ComposedChartProps": undefined,
  "LegendProps": undefined,
  "TooltipProps": undefined,
  "XAxisProps": undefined,
  "YAxisProps": undefined,
}
`;

exports[`plugin-chart-composed Chart with default props (legend top / horizontal / bars) 1`] = `
Object {
  "BarProps": Array [
    Object {
      "children": Array [
        undefined,
        false,
      ],
      "dataKey": "COUNT_DISTINCT(group_name)",
      "fill": "#ff7f0e",
      "isAnimationActive": undefined,
      "label": Object {
        "breakdown": "COUNT_DISTINCT(group_name)",
        "breakdowns": Array [
          "COUNT_DISTINCT(period)",
          "COUNT_DISTINCT(group_name)",
        ],
        "content": [Function],
        "currentData": Array [
          Object {
            "COUNT_DISTINCT(group_name)": 7,
            "COUNT_DISTINCT(period)": 5,
            "group_type": "Direct Due To Group",
            "rechartsDataKey": "Direct Due To Group",
            "rechartsDataKeyUI": "Direct Due To Group",
          },
          Object {
            "COUNT_DISTINCT(group_name)": 7,
            "COUNT_DISTINCT(period)": 5,
            "group_type": "Due To Group",
            "rechartsDataKey": "Due To Group",
            "rechartsDataKeyUI": "Due To Group",
          },
          Object {
            "COUNT_DISTINCT(group_name)": 3,
            "COUNT_DISTINCT(period)": 5,
            "group_type": "Summary Group",
            "rechartsDataKey": "Summary Group",
            "rechartsDataKeyUI": "Summary Group",
          },
          Object {
            "COUNT_DISTINCT(group_name)": 31,
            "COUNT_DISTINCT(period)": 5,
            "group_type": "Variable",
            "rechartsDataKey": "Variable",
            "rechartsDataKeyUI": "Variable",
          },
        ],
        "fill": "white",
        "formatter": [Function],
        "hasOrderedBars": undefined,
        "position": "center",
      },
      "opacity": 1,
      "stackId": "COUNT_DISTINCT(group_name)",
      "yAxisId": "left",
    },
    Object {},
  ],
  "CartesianGridProps": undefined,
  "ComposedChartProps": undefined,
  "LegendProps": undefined,
  "TooltipProps": undefined,
  "XAxisProps": undefined,
  "YAxisProps": undefined,
}
`;

exports[`plugin-chart-composed processNumbers adaptive with digits for different numbers 1`] = `
Array [
  Object {
    "metric": -0.111,
  },
  Object {
    "metric": -0.112,
  },
  Object {
    "metric": -0.112,
  },
  Object {
    "metric": -0.1,
  },
  Object {
    "metric": 0,
  },
  Object {
    "metric": 0.1,
  },
  Object {
    "metric": 0.111,
  },
  Object {
    "metric": 0.112,
  },
  Object {
    "metric": 0.112,
  },
  Object {
    "metric": 0.123,
  },
  Object {
    "metric": 0.123,
  },
  Object {
    "metric": 123,
  },
  Object {
    "metric": 123456,
  },
  Object {
    "metric": 123456789,
  },
  Object {
    "metric": 1.2345678910111213e+30,
  },
]
`;

exports[`plugin-chart-composed processNumbers adaptive with digits without precision 1`] = `
Array [
  Object {
    "metric": -0.1114,
  },
  Object {
    "metric": -0.1115,
  },
  Object {
    "metric": -0.1116,
  },
  Object {
    "metric": -0.1,
  },
  Object {
    "metric": 0,
  },
  Object {
    "metric": 0.1,
  },
  Object {
    "metric": 0.1114,
  },
  Object {
    "metric": 0.1115,
  },
  Object {
    "metric": 0.1116,
  },
  Object {
    "metric": 0.123,
  },
  Object {
    "metric": 0.123456,
  },
  Object {
    "metric": 123,
  },
  Object {
    "metric": 123456,
  },
  Object {
    "metric": 123456789,
  },
  Object {
    "metric": 1.2345678910111213e+30,
  },
]
`;
